--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'ms_sans_serif';
+  src: url('react95/dist/fonts/ms_sans_serif.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal
+}
+@font-face {
+  font-family: 'ms_sans_serif';
+  src: url('react95/dist/fonts/ms_sans_serif_bold.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal
+}
+body, * {
+  font-family: 'ms_sans_serif';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body,
+#root,
+canvas {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  
+}
+body{
+  background-color: rgb(15%, 50%, 51%);
+ 
+}
+.window-state{
+  display: inline-block;
+  position: absolute;
+  right: 8px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.window-header {
+  position: sticky;
+  top: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-between;
+ 
 }
