--- a/src/components/Desktop/NavBar.css
+++ b/src/components/Desktop/NavBar.css
@@ -10,5 +10,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-   
+}
+
+.textStyle{
+    font-family: 'ms_sans_serif';
 }
