--- a/src/components/AudioVIZ/AudioWindow.css
+++ b/src/components/AudioVIZ/AudioWindow.css
@@ -10,5 +10,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-   
 }
+
+.stack {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #606060;
+  }
