--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -17,12 +17,13 @@ content {
     display: flex;
     -ms-flex-align: center;
     width: fit-content;
+    height: fit-content;
     margin: auto;
 }
 
 #name{
     font-weight: bolder;
-    font-size: 1.1em;
+    font-size: 1.0em;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -31,7 +32,7 @@ content {
 .me_pos{
     padding-top: 5px;
     text-align: center;
-    font-size: 1.1em;
+    font-size: 1.0em;
     padding-bottom: 5px;
 }
 .me_school {
@@ -62,17 +63,17 @@ content {
 }
 
 .hobbies {
-    margin-top: 5px;
+    margin-top: 1px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 .educ1{
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 .educ2{
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 .hobby {
@@ -92,4 +93,8 @@ content {
 .button {
     margin-right: -6px;
     margin-top: 1px;
+}
+
+.description {
+    font-size: 1.0em;    
 }
