--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -9,5 +9,11 @@
     top: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;  
+    justify-content: space-between;
+   
+}
+.image-project{
+    width: 100%;
+    height: 100%;
+    align-items: center;
 }
